--- a/react-native/package.json
+++ b/react-native/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-navigation/native": "^7.1.18",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "axios": "^1.12.2",
-    "react-native-svg": "15.4.0",
-    "expo-linear-gradient": "~13.0.2",
     "expo": "~54.0.7",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.4.0"
   },
   "private": true
 }
